tweaking the docs

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,10 +1,20 @@
-== About
+= About
 
-WhalePail is a simple app to generate RSS feeds for a variety of Twitter data.  You plug in a few parameters, and get back an RSS feed, which you can then check whenever you want.  This is handy if there's someone or something you want to follow on Twitter, but the standard methods of using Twitter aren't working for you.
+WhalePail is a simple app to generate RSS feeds for a variety of
+Twitter data.  You plug in a few parameters, and get back an RSS feed,
+which you can then check whenever you want.  This is handy if there's
+someone or something you want to follow on Twitter, but the standard
+methods of using Twitter aren't working for you.
 
-The code runs on Sinatra and is pretty basic.  I wrote it to learn about a couple things at once: Sinatra, Twitter's new OAuth Requirments, and the DataMapper library.
 
-== USING
+The code runs on Sinatra and is pretty basic.  I wrote it to learn
+about a couple things at once: Sinatra, Twitter's new OAuth
+Requirments, and the DataMapper library.
+
+p.s. Sinatra rocks
+
+
+== INSTALL
 
 To run the code on your own server, you will need to:
 
@@ -12,7 +22,7 @@ To run the code on your own server, you will need to:
 * setup an app on twitter
 * specify the parameters you need to get OAuth working
 
-=== Required Gems
+=== Required Gems (Possibly incomplete list)
 * sinatra
 * dm-core
 * twitter_oauth
@@ -20,6 +30,15 @@ To run the code on your own server, you will need to:
 * builder
 * json
 * md5
+
+=== Connecting with Twitter
+
+You can create a new app here: http://twitter.com/apps/new
+
+<b>app type:</b> browser
+<b>default access type:</b> read-only
+<b>callback url</b> - Unless you change something, this will be http://<i>location-of-app</i>/auth
+
 
 == TODO
 * Add an option to get JSON back for use with other apps
