--- a/README.rdoc
+++ b/README.rdoc
@@ -6,7 +6,6 @@ which you can then check whenever you want.  This is handy if there's
 someone or something you want to follow on Twitter, but the standard
 methods of using Twitter aren't working for you.
 
-
 The code runs on Sinatra and is pretty basic.  I wrote it to learn
 about a couple things at once: Sinatra, Twitter's new OAuth
 Requirments, and the DataMapper library.
@@ -18,18 +17,10 @@ p.s. Sinatra rocks
 
 To run the code on your own server, you will need to:
 
-* install the code and it's prerequisites somewhere
+* install the code somewhere
+* run 'bundle install'
 * setup an app on twitter
 * specify the parameters you need to get OAuth working
-
-=== Required Gems (Possibly incomplete list)
-* sinatra
-* dm-core
-* twitter_oauth
-* twitter-text
-* builder
-* json
-* md5
 
 === Connecting with Twitter
 
@@ -42,7 +33,8 @@ You can create a new app here: http://twitter.com/apps/new
 
 == TODO
 * Add an option to get JSON back for use with other apps
-
+* Add some JS widgets to display similar to Twitter's widgets
+* Consider a version that doesn't require authorization -- we don't actually need to use OAuth to do searches, it's strictly to manage users, but that could be handled with a cookie/session key, or traditional registration.
 
 == LICENSE
 Licensed under MIT http://creativecommons.org/licenses/MIT/
